--- a/latex/matter/implbasic.tex
+++ b/latex/matter/implbasic.tex
@@ -62,4 +62,4 @@ The Gaussian backend was also responsible for recognizing the out-of-set languag
 
 The baseline system is an implementation of the smoothed language model described in chapter \ref{sect:baselinetheory}. For each language, one model is created for up to phoneme trigrams. The $k$-parameter that determines the model's degree of smoothing was set independently for each language. A range of parameter values were tested for each language, and the parameter that maximized the log-likelihood in equation \ref{basescore} was chosen. Since smoothing adds bias to the model, the likelihood for the training set will decrease for a higher value of $k$. Because of this, the total likelihood over the development set was used for the tests. An other strategy might have been to use the same value for $k$ for each language. We could then select the value that maximized the identification rate using equation \ref{lreiddec} with the likelihoods produced from the model. The former approach was used since trigrams not seen in the training set appeared with clearly different frequency for each language. This indicated that each model would require a different degree of smoothing. It did not seem feasible to maximize the identification rate using different $k$-values for each language as the parameter search-space would be too great. 
 
-The identification rate for 30, 10 and 3 second development utterances all seemed to benefit slightly from using the unmapped phoneme transcript and it was therefore used for the final system. The absolute increase in the identification rate was never more than $2$ \% for any of the segment durations. The log-likelihoods where then used as a feature-vector for the Gaussian backend discussed in seciton \ref{sect:implgaussback}.
+The identification rate for 30, 10 and 3 second development utterances all seemed to benefit slightly from using the unmapped phoneme transcript and it was therefore used for the final system. The log-likelihoods produced by the language model was somewhat unsuited to use as score-vector for the Gaussian backend. This is because the likelihoods are affected by the number of  phonemes in the utterance. Instead we calculated the posterior probability for each class using equal priors for the score-vector. This can be viewed as a normalization of the score-vector.
