--- a/latex/matter/implivector.tex
+++ b/latex/matter/implivector.tex
@@ -68,7 +68,7 @@ One possible solution to the problems with the default system would be to train 
 	\end{center}
 \end{figure}
 
-The likelihoods for training and development documents during this training process is shown in figure \ref{resetlike}. From the figure we see that the likelihood for both training and development utterances ceases to increase after a few iterations and $\mathbf{T}$ never becomes over-fitted to the training data. Still the likelihoods during this training method is smaller than the likelihoods we got using the standard training method, shown in figure \ref{fig:vanivecttrainlike}. This is not so unexpected since we restrict the iVectors by resetting them before each iteration. During iVector extraction, where the iVectors are given more iterations to converge to their maxima, this difference in likelihood vanishes.
+The likelihoods for training and development documents during this training process is shown in figure \ref{resetlike}. From the figure we see that the likelihood for both training and development utterances ceases to increase after a few iterations and $\mathbf{T}$ never becomes over-fitted to the training data. Still the likelihoods during this training method is smaller than the likelihoods we got using the standard training method, shown in figure \ref{fig:vanivecttrainlike}. This is not so unexpected since we restrict the iVectors by resetting them before each iteration. During iVector extraction, where the iVectors are given more iterations to converge to their maxima, the likelihood for development data even slightly exceeded the maximum likelihood we got from the standard training method.
 
 \begin{figure}[hbt!]
 	\begin{center}
@@ -78,12 +78,12 @@ The likelihoods for training and development documents during this training proc
 	\end{center}
 \end{figure}
 
-In figure \ref{fig:resetidrate} we compare the identification rate of the standard and reset-trained sytems on 30 second development vectors. As expected the reset-trained system has a higher identification rate when iVectors are extracted with few iterations. It is more surprising that the identification rate for the standard system doesn't exceed the reset trained system at any iteration. We're not sure of the reason for this, or if this improvement extends to other data-sets. It might be that the reset-training results in less \emph{model variance}, since $\mathbf{T}$ is trained on iVectors that have only captured coarse details of the utterances. 
+In figure \ref{fig:resetidrate} we compare the identification rate of the standard and reset-trained sytems on 30 second development vectors. As expected the reset-trained system has a higher identification rate when iVectors are extracted with few iterations. It is more surprising that the identification rate for the standard system doesn't exceed the reset trained system at any iteration. We're not sure if this improvement would extend to other data-sets or systems. It might be that the reset-training results in the system having less \emph{model variance}, since $\mathbf{T}$ is trained on iVectors that have only captured coarse details of the utterances. The standard training method on the other hand is able to model minor details in utterances. Although the updates of $\mathbf{T}$ stop before this results in a deteroration of the development likelihood, the modelling of the minor details might offer little discriminative information for unseen data. This slight over-fitting is also supported by the earlier observation that we achieved a higher likelihood for development utterances during iVector extraction, when we used the reset trained total variability matrix.
 
 \section{iVector Dimension}
 \label{sect:ivectdimtests}
 
-A very important parameter that hasn't been much discussed is the iVector dimension. Since there will be more degrees of freedom, it seems natural that a higher iVector-dimension will result in lower likelihood for both training and development vectors. Still, this does not mean that we should use iVectors of high dimension. A high likelihood does not neccessarily mean that the system will perform better, and using low-dimension iVectors is less computational intensive.  In figure \ref{fig:dimidrate} we show the identification rate for the standard and reset-trained iVector system. We have both trained and tested the classifier using iVectors that where extracted with the same number of Newton Raphson updates. This follows our previous logic of accommodating so that training, development and test iVectors all come from as similar as possible statistical distributions. The number of iterations that gave the best result varied with each system. As we see, the reset-trained system consistently outperformed the regular system regardless of dimension. Most notably, it performed much better at lower dimensions.
+A very important parameter that hasn't been much discussed is the iVector dimension. Since there will be more degrees of freedom, it seems natural that a higher iVector-dimension will result in lower likelihood for both training and development vectors. Still, this does not mean that we should use iVectors of high dimension. A high likelihood does not neccessarily mean that the system will perform better, and using low-dimension iVectors is less computational intensive.  In figure \ref{fig:dimidrate} we show the identification rate for the standard and reset-trained iVector system. We have both trained and tested the classifier using iVectors that where extracted with the same number of Newton Raphson updates. This follows our previous logic of accommodating so that training, development and test iVectors all come from as similar as possible statistical distributions. The number of extraction iterations that gave the best result varied with each system. As we see, the reset-trained system consistently outperformed the regular system regardless of dimension.
 
 \begin{figure}[hbt!]
 	\begin{center}
@@ -93,9 +93,11 @@ A very important parameter that hasn't been much discussed is the iVector dimens
 	\end{center}
 \end{figure}
 
-It should be noted that the difference between the best and the worst results is only about 35 more correctly identified utterances out of about 1500. We only try a discrete set of penalty-parameters for the classifier, and also plain luck might simply make a few utterances in an iVector-space of some dimension barely cross over the decision boundary to the wrong or correct class. This explains some of the noise in the performance results, and why it is difficult to see clear trends in the performance when increasing or decreasing the performance. The dimension that performed best in the test might not objectively be best suited to separate the languages, and it is no guarantee that it will perform best on the NIST test set. For the final system we used the $150$-dimensional reset-trained iVector system. Although the $250$ dimensional system performed slightly better on the devtest vectors, the high dimensionality made the system much slower to train and test. The $150$-dimensional system performed best when iVectors where extracted with four iterations of Newton Raphson updates.
+It should be noted that the difference between the best and the worst results is only about 35 more correctly identified utterances out of about 1500. We only try a discrete set of penalty-parameters for the classifier, and also plain luck might simply make a few utterances in an iVector-space of some dimension barely cross over the decision boundary to the wrong or correct class. This explains some of the noise in the performance results, and why it is difficult to see clear trends in the performance when increasing or decreasing the performance. The dimension that performed best in the test might not objectively be best suited to separate the languages, and it is no guarantee that it will perform best on the NIST test set. For the final system we used the $150$-dimensional reset-trained iVector system. Although the $250$ dimensional system performed slightly better on the devtest vectors, the high dimensionality made the system much slower to train and test. 
+%The $150$-dimensional system performed best when iVectors where extracted with four iterations of Newton Raphson updates.
 
 \section{System for Shorter Duration Utterances}
+\label{sect:ivectshort}
 
 In the past sections we have based our design decisions for the iVector systems performance on 30 second utterances. At least to some degree, many of these decisions should be valid for the 10 and 3 second tests as well. In section \ref{sect:docvectlength} we argued that the total variability matrix could, and should, be trained using long-duration utterances. For the reset-trained total variability matrix, over-fitting wasn't an issue, so it would probably make little difference for the final matrix to check for over-fitting using shorter duration development vectors. This all suggests that the same total variability matrix could be used for utterances of all sizes. 
 
