--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -1,5 +1,6 @@
 \documentclass[10pt,b5report,twoside]{thesis}
 \usepackage{rotating}
+%\usepackage[english,norsk]{babel}
 
 \begin{document}
 
@@ -17,7 +18,6 @@
 \mainmatter
 %\input{matter/intro}
 \part{Theory}
-%\input{matter/introduction to languages}
 \input{matter/lresystems}
 \input{matter/baseline}
 \input{matter/ivector}
@@ -30,10 +30,12 @@
 \part{Results}
 \input{matter/idresults}
 \input{matter/detresults}
-
+\input{matter/conclusions}
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
+
+%\backmatter
 
 \appendix
 \input{matter/AmathProof}
