--- a/latex/references.bib
+++ b/latex/references.bib
@@ -201,11 +201,38 @@
   year={2006},
   organization={IEEE}
 }
-
-
-
-
-
+@inproceedings{mccallum1998comparison,
+  title={A comparison of event models for naive bayes text classification},
+  author={McCallum, A. and Nigam, K.},
+  booktitle={AAAI-98 workshop on learning for text categorization},
+  volume={752},
+  pages={41--48},
+  year={1998}
+}
+@inproceedings{singer2003acoustic,
+  title={Acoustic, phonetic, and discriminative approaches to automatic language identification},
+  author={Singer, E. and Torres-Carrasquillo, PA and Gleason, TP and Campbell, WM and Reynolds, D.A.},
+  booktitle={Eighth European Conference on Speech Communication and Technology},
+  year={2003}
+}
+@inproceedings{ma2007discriminative,
+  title={Discriminative vector for spoken language recognition},
+  author={Ma, B. and Tong, R. and Li, H.},
+  booktitle={Acoustics, Speech and Signal Processing, 2007. ICASSP 2007. IEEE International Conference on},
+  volume={4},
+  pages={IV--1001},
+  year={2007},
+  organization={IEEE}
+}
+@inproceedings{matejka2006use,
+  title={Use of anti-models to further improve state-of-the-art prlm language recognition system},
+  author={Matejka, P. and Schwarz, P. and Burget, L. and Cernocky, J.},
+  booktitle={Acoustics, Speech and Signal Processing, 2006. ICASSP 2006 Proceedings. 2006 IEEE International Conference on},
+  volume={1},
+  pages={I--I},
+  year={2006},
+  organization={IEEE}
+}
 
 
 
