--- a/latex/matter/abstract.tex
+++ b/latex/matter/abstract.tex
@@ -1,3 +1,12 @@
+%\selectlanguage{english}
 \begin{abstract}
 Todo: Skrive abstract intro og konklusjon. Forbedre tittler. Se over etter skrivefeil og rare formuleringer.
 \end{abstract}
+
+\cleardoublepage
+\renewcommand{\abstractname}{Sammendrag}
+%\selectlanguage{norsk}
+\begin{abstract}
+tull
+\end{abstract}
+%\selectlanguage{english}
