--- a/latex/matter/ivector.tex
+++ b/latex/matter/ivector.tex
@@ -116,5 +116,5 @@ In appendix \ref{sect:orthproof} we show that the increase in likelihood by upda
 
 In an iterative algorithm it is important to ensure that each iteration brings you closer to the solution of the problem. The Newton Raphson method is oblivious to high-order derivatives, and we only use an approximation to the Hessian, so an increase in likelihood is not guaranteed from updates using equation \ref{lupeqN} and \ref{lupeqC}. In \cite{kockmann2010prosodic}, Kockmann et. al. would halve the update step until the likelihood from equation \ref{totlike} increased when updating either row of $\mathbf{T}$ or iVectors. If a higher likelihood wasn't achieved after some attempts, the old vector would be used.  Seemingly the only downside with such a check would be the additional computational requirements in an update.
 
-In section \ref{sect:svmnormal} we argued that using unscaled features could cause the classifier to label data only based on high-variance features. This problem might apply to the iVector model as well. A good model of high-variancce features would likely be crucial to maximize equation \ref{totlike}. Not only because the number of occurrences will vary greatly between utterances, but also since a high variance implies that the feature occurs very frequently in at least some utterances. This implies that the precision for the multinomial models probability mass assigned to the feature should have a greater effect on the total likelihood. Many dimensions of the iVector may then be spent on accurately controlling $\phi$ for those features. It is not clear if we gain much information from this precise fitting, rather than having coarser knowledge about the exact frequency of those features, and having more degrees of freedom in the i-vector to model other features. In \cite{soufifar2011ivector} the iVector system's performance increased when the square root of elements in the document vector, $\gamma_n$, was used. By taking the square root, frequent features will be a smaller part of the total feature count, and their variance between utterances will decrease. This should spread the importance of modeling each feature more evenly across the whole document vector.
+In section \ref{sect:svmnormal} we argued that using unscaled features could cause the classifier to label data only based on high-variance features. This problem might apply to the iVector model as well. A good model of high-variance features would likely be crucial to maximize equation \ref{totlike} and many dimensions in the iVector may then be spent on accurately controlling $\phi$ for those features. It is not clear if we gain much information from this precise fitting, rather than having coarser knowledge about the exact frequency of those features, and having more degrees of freedom in the iVector to model other features. In \cite{soufifar2011ivector} the iVector system's performance increased when the square root of elements in the document vector, $\gamma_n$, was used. By taking the square root, the dynamic range of high variance features will be heavily scaled, and the importance of modeling each feature should be spread more evenly across the whole document vector.
 
