--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -16,7 +16,7 @@
 %\listoftables
 
 \mainmatter
-%\input{matter/intro}
+\input{matter/intro}
 \part{Theory}
 \input{matter/lresystems}
 \input{matter/baseline}
